feat: implement user management module with CRUD operations and DTOs

--- a/docs/parts.mdx
+++ b/docs/parts.mdx
@@ -39,7 +39,7 @@ pnpm add -D @types/node @nestjs/cli typescript ts-node
 
 **Required packages:**
 ```bash
-npm install class-validator class-transformer @nestjs/mapped-types
+pnpm add class-validator class-transformer @nestjs/mapped-types
 ```
 
 **Files to create:**
